--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "08f48d7c",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0863da40",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3da803c0",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c4f49670",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "eee6fa8a",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "053596e8",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "43c52faf",
    "metadata": {},
    "outputs": [
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "32e5c88e",
    "metadata": {},
    "outputs": [
@@ -1725,13 +1725,31 @@
     "    plt.xlabel(\"Rentabilidad (%)\")\n",
     "    plt.title(\"Top 10 películas más rentables\")\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a25c0409",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prueba commit.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"prueba commit.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "practicaIAEDA (3.12.0)",
+   "display_name": "proyectoIAEnv (3.12.0)",
    "language": "python",
    "name": "python3"
   },
