agregar archivo de limpieza

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "08f48d7c",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0863da40",
    "metadata": {},
    "outputs": [],
@@ -315,6 +315,105 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a669df95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MovieID                 0.0\n",
+      "Title                   0.0\n",
+      "Genre                   0.0\n",
+      "ReleaseYear             0.0\n",
+      "ReleaseDate             0.0\n",
+      "Country                 0.0\n",
+      "BudgetUSD               0.0\n",
+      "US_BoxOfficeUSD         0.0\n",
+      "Global_BoxOfficeUSD     0.0\n",
+      "Opening_Day_SalesUSD    0.0\n",
+      "One_Week_SalesUSD       0.0\n",
+      "IMDbRating              0.0\n",
+      "RottenTomatoesScore     0.0\n",
+      "NumVotesIMDb            0.0\n",
+      "NumVotesRT              0.0\n",
+      "Director                0.0\n",
+      "LeadActor               0.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Porcentaje de datos nulos por columna\n",
+    "porcentaje_nulos = df.isnull().mean() * 100\n",
+    "\n",
+    "# Mostrar el resultado ordenado de mayor a menor\n",
+    "porcentaje_nulos = porcentaje_nulos.sort_values(ascending=False)\n",
+    "\n",
+    "print(porcentaje_nulos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3be3acac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RottenTomatoesScore     0.017072\n",
+      "MovieID                 0.000000\n",
+      "Title                   0.000000\n",
+      "ReleaseYear             0.000000\n",
+      "Genre                   0.000000\n",
+      "Country                 0.000000\n",
+      "BudgetUSD               0.000000\n",
+      "US_BoxOfficeUSD         0.000000\n",
+      "ReleaseDate             0.000000\n",
+      "Global_BoxOfficeUSD     0.000000\n",
+      "Opening_Day_SalesUSD    0.000000\n",
+      "One_Week_SalesUSD       0.000000\n",
+      "IMDbRating              0.000000\n",
+      "NumVotesIMDb            0.000000\n",
+      "NumVotesRT              0.000000\n",
+      "Director                0.000000\n",
+      "LeadActor               0.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Porcentaje de ceros por columna\n",
+    "porcentaje_ceros = (df == 0).mean() * 100\n",
+    "\n",
+    "# Ordenar de mayor a menor\n",
+    "porcentaje_ceros = porcentaje_ceros.sort_values(ascending=False)\n",
+    "\n",
+    "print(porcentaje_ceros)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bc7e6572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configuración general\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "plt.rcParams[\"figure.figsize\"] = (8, 4)\n",
+    "\n",
+    "# Separar variables por tipo\n",
+    "numericas = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "categoricas = df.select_dtypes(include=['object']).columns\n",
+    "fechas = df.select_dtypes(include=['datetime64']).columns\n"
    ]
   },
   {
@@ -1070,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ba09e4ca",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1269,7 @@
     "    \n",
     "    return df_filtrado\n",
     "\n",
-    "# Aplicar análisis mejorado\n",
+    "# Aplicar analisis mejorado\n",
     "df_mejorado = analisis_estadistico_mejorado(df)"
    ]
   },
@@ -1471,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "63061c84",
    "metadata": {},
    "outputs": [],
@@ -1490,7 +1589,7 @@
     "    elif x > 1:\n",
     "        return \"Rentable leve (>100%)\"\n",
     "    else:\n",
-    "        return \"Pérdida económica (<=100%)\"\n",
+    "        return \"P3rdida económica (<=100%)\"\n",
     "\n",
     "df_limpio['CategoriaRentabilidad'] = df_limpio['Profitability'].apply(clasificar_rentabilidad)"
    ]
